--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,3 +1,5 @@
+version: "3.9"
+
 services:
   postgres:
     image: postgres:15
@@ -13,19 +15,24 @@ services:
       - postgres_data:/var/lib/postgresql/data
     networks:
       - terra_network
+    healthcheck:
+      test: ["CMD-SHELL", "pg_isready -U postgres"]
+      interval: 10s
+      timeout: 5s
+      retries: 5
 
   minio:
     image: quay.io/minio/minio
     container_name: minio
     ports:
-      - "9000:9000"   # Port API S3/GCS
-      - "9001:9001"   # Port Console Web
+      - "9000:9000"
+      - "9001:9001"
     environment:
       MINIO_ROOT_USER: admin
       MINIO_ROOT_PASSWORD: admin123
     volumes:
       - minio_data:/data
-    command: server --console-address ":9001" /data
+    command: server --address ":9000" --console-address ":9001" /data
     networks:
       - terra_network
 
